--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-comet_ml==3.47.2
+comet_ml==3.47.3
+kaggle==1.6.17
+numpy==2.1.3
 Pillow==10.1.0
 Pillow==11.0.0
 PyYAML==6.0.1
 PyYAML==6.0.2
+scipy==1.14.1
 torch==2.1.0
 torchvision==0.16.0
 tqdm==4.66.1
