Add inference and ONNX export functionality with updated configuration

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,24 @@
 # config/default.yaml
 # Default configuration file with all possible parameters
 
+# PLEASE DO NOT USE WINDOWS PATHS (i.e. backslashes ('\')) IN THE CONFIG FILE, USE FORWARD SLASHES ('/').
+# Windows paths will annoy config parsing stuff and I am too lazy to bother with solving it.
+
+inference:
+  image_path: "./data/imgs/sample.jpg"  # path to single image for inference
+  output_path: "./output/sample_output.jpg"  # directory to save output images
+  gen_checkpoint: "pix2pix_gen_180.pth" #"./models/checkpoints/pix2pix_gen_X.pth"  # path to generator checkpoint
+  device: "cpu"  # or "cuda" or "cuda:0" for specific GPU
+
+export:
+  gen_checkpoint: "pix2pix_gen_180.pth"  # path to generator checkpoint for export
+  export_path: "pix2pix_gen_sar2rgb.onnx"  # path to save exported model
+  export_format: "onnx"  # format to export the model: "onnx" [Currently only ONNX is supported]
+  is_dynamic: true  # whether to export with dynamic axes
+  input_shape: [1, 3, 256, 256]  # input shape for the model if not using dynamic axes
+  onnx:
+    opset_version: 17  # ONNX opset version for export
+
 # Dataset parameters
 dataset:
   root_dir: "./data/v_2/"
