--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-comet_ml==3.47.3
-kaggle==1.6.17
-numpy==2.1.3
-Pillow==10.1.0
-Pillow==11.0.0
-PyYAML==6.0.1
+comet_ml==3.49.6
+kaggle==1.7.4.2
+numpy==2.2.4
+onnx==1.17.0
+onnxruntime==1.21.0
+Pillow==11.1.0
 PyYAML==6.0.2
-scipy==1.14.1
-torch==2.1.0
-torchvision==0.16.0
-tqdm==4.66.1
+scipy==1.15.2
+torch==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
